--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/AddCommande.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/AddCommande.fxml
@@ -48,11 +48,141 @@
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                         <ComboBox fx:id="client" minHeight="40.0" minWidth="250.0" onMouseClicked="#clientInitialize" prefWidth="150.0" promptText="Selectionner le client" />
-                        <TextField fx:id="horaire" minHeight="40.0" minWidth="250.0" promptText="Horaire de livraison">
-                           <HBox.margin>
-                              <Insets left="200.0" />
-                           </HBox.margin></TextField>
+                         <ComboBox fx:id="client" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner le client" />
+                         <VBox prefHeight="335.0" prefWidth="420.0" styleClass="profil-container">
+                             <children>
+                                 <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="100.0"
+                                       styleClass="profil-container-header">
+                                     <padding>
+                                         <Insets left="20.0"/>
+                                     </padding>
+                                     <children>
+                                         <Label styleClass="profil-container-header-title"
+                                                text="Horaires de la tournée"/>
+                                     </children>
+                                 </VBox>
+                                 <VBox alignment="CENTER_LEFT" prefHeight="275.0" prefWidth="418.0">
+                                     <children>
+                                         <VBox styleClass="clock-container">
+                                             <children>
+                                                 <Label styleClass="clock-title"
+                                                        text="Horaire de début :"/>
+                                                 <HBox alignment="CENTER" prefHeight="100.0"
+                                                       prefWidth="200.0">
+                                                     <children>
+                                                         <VBox alignment="CENTER" prefHeight="100.0"
+                                                               prefWidth="112.0">
+                                                             <children>
+                                                                 <Button fx:id="plusHourDebut"
+                                                                         mnemonicParsing="false"
+                                                                         onMouseClicked="#onPlusHourDebut"
+                                                                         styleClass="clock-plus-button"
+                                                                         text="+"/>
+                                                                 <Label fx:id="hourDebut"
+                                                                        alignment="CENTER"
+                                                                        minHeight="30.0" minWidth="30.0"
+                                                                        prefHeight="10.0"
+                                                                        prefWidth="10.0"
+                                                                        styleClass="clock-digits"
+                                                                        text="00"/>
+                                                                 <Button fx:id="minusHourDebut"
+                                                                         mnemonicParsing="false"
+                                                                         onMouseClicked="#onMinusHourDebut"
+                                                                         styleClass="clock-minus-button"
+                                                                         text="-"/>
+                                                             </children>
+                                                         </VBox>
+                                                         <Label text=":"/>
+                                                         <VBox alignment="CENTER" prefHeight="100.0"
+                                                               prefWidth="112.0">
+                                                             <children>
+                                                                 <Button fx:id="plusMinutesDebut"
+                                                                         mnemonicParsing="false"
+                                                                         onMouseClicked="#onPlusMinutesDebut"
+                                                                         styleClass="clock-plus-button"
+                                                                         text="+"/>
+                                                                 <Label fx:id="minutesDebut"
+                                                                        alignment="CENTER"
+                                                                        minHeight="30.0" minWidth="30.0"
+                                                                        styleClass="clock-digits"
+                                                                        text="00"/>
+                                                                 <Button fx:id="minusMinutesDebut"
+                                                                         mnemonicParsing="false"
+                                                                         onMouseClicked="#onMinusMinutesDebut"
+                                                                         styleClass="clock-minus-button"
+                                                                         text="-"/>
+                                                             </children>
+                                                         </VBox>
+                                                     </children>
+                                                 </HBox>
+                                             </children>
+                                             <padding>
+                                                 <Insets bottom="5.0"/>
+                                             </padding>
+                                             <VBox.margin>
+                                                 <Insets bottom="15.0"/>
+                                             </VBox.margin>
+                                         </VBox>
+                                         <VBox>
+                                             <children>
+                                                 <Label styleClass="clock-title"
+                                                        text="Horaire de fin :"/>
+                                                 <HBox alignment="CENTER" prefHeight="100.0"
+                                                       prefWidth="200.0">
+                                                     <children>
+                                                         <VBox alignment="CENTER" prefHeight="100.0"
+                                                               prefWidth="112.0">
+                                                             <children>
+                                                                 <Button fx:id="plusHourFin"
+                                                                         mnemonicParsing="false"
+                                                                         onMouseClicked="#onPlusHourFin"
+                                                                         styleClass="clock-plus-button"
+                                                                         text="+"/>
+                                                                 <Label fx:id="hourFin"
+                                                                        alignment="CENTER"
+                                                                        minHeight="30.0" minWidth="30.0"
+                                                                        styleClass="clock-digits"
+                                                                        text="00"/>
+                                                                 <Button fx:id="minusHourFin"
+                                                                         mnemonicParsing="false"
+                                                                         onMouseClicked="#onMinusHourFin"
+                                                                         styleClass="clock-minus-button"
+                                                                         text="-"/>
+                                                             </children>
+                                                         </VBox>
+                                                         <Label text=":"/>
+                                                         <VBox alignment="CENTER" prefHeight="100.0"
+                                                               prefWidth="112.0">
+                                                             <children>
+                                                                 <Button fx:id="plusMinutesFin"
+                                                                         mnemonicParsing="false"
+                                                                         onMouseClicked="#onPlusMinutesFin"
+                                                                         styleClass="clock-plus-button"
+                                                                         text="+"/>
+                                                                 <Label fx:id="minutesFin"
+                                                                        alignment="CENTER"
+                                                                        minHeight="30.0" minWidth="30.0"
+                                                                        styleClass="clock-digits"
+                                                                        text="00"/>
+                                                                 <Button fx:id="minusMinutesFin"
+                                                                         mnemonicParsing="false"
+                                                                         onMouseClicked="#onMinusMinutesFin"
+                                                                         styleClass="clock-minus-button"
+                                                                         text="-"/>
+                                                             </children>
+                                                         </VBox>
+                                                     </children>
+                                                 </HBox>
+                                             </children>
+                                         </VBox>
+                                     </children>
+                                     <padding>
+                                         <Insets left="20.0" right="20.0"/>
+                                     </padding>
+                                 </VBox>
+                             </children>
+                         </VBox>
+
                      </children>
                      <VBox.margin>
                         <Insets top="25.0" />
