--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddAccount.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddAccount.fxml
@@ -29,7 +29,7 @@
                                 <Region styleClass="back-button-img" />
                             </graphic>
                         </Button>
-                        <Label styleClass="main-title" text="Création d'un producteur">
+                        <Label styleClass="main-title" text="Création d'un compte">
                             <VBox.margin>
                                 <Insets top="20.0" />
                             </VBox.margin></Label>
@@ -57,7 +57,7 @@
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Ajouter le producteur" onMouseClicked="#onCreateButton" styleClass="addCommandeButton"/>
+                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Ajouter le compte" onMouseClicked="#onCreateButton" styleClass="addCommandeButton"/>
                             </children>
                         </HBox>
                     </children>
