--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditAccount.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditAccount.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ComboBox?>
 
-<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.EditCommandeController">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.EditAccountController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
             <left>
@@ -24,7 +24,7 @@
                                 <Region styleClass="back-button-img" />
                             </graphic>
                         </Button>
-                        <Label styleClass="main-title" text="Modification de la commande n°">
+                        <Label fx:id ="title" styleClass="main-title" text="Modification de la commande n°">
                             <VBox.margin>
                                 <Insets top="20.0" />
                             </VBox.margin>
@@ -32,8 +32,8 @@
                     </children>
                     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                         <children>
-                            <ComboBox fx:id="article" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner l'article"/>
-                            <TextField fx:id="quantite" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Quantité">
+                            <TextField fx:id="identifiant" minHeight="40.0" minWidth="250.0" prefWidth="150.0"/>
+                            <TextField fx:id="mdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0">
                                 <HBox.margin>
                                     <Insets left="200.0" />
                                 </HBox.margin>
@@ -45,12 +45,7 @@
                     </HBox>
                     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                         <children>
-                            <ComboBox fx:id="client" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner le client" />
-                            <TextField fx:id="horaire" minHeight="40.0" minWidth="250.0" promptText="Horaire de livraison">
-                                <HBox.margin>
-                                    <Insets left="200.0" />
-                                </HBox.margin>
-                            </TextField>
+                            <ComboBox fx:id="grade" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner le grade"/>
                         </children>
                         <VBox.margin>
                             <Insets top="25.0" />
@@ -58,15 +53,7 @@
                     </HBox>
                     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                         <children>
-                            <ComboBox fx:id="numSiret" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Numéro Siret" />
-                        </children>
-                        <VBox.margin>
-                            <Insets top="25.0" />
-                        </VBox.margin>
-                    </HBox>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Modifier la commande" onMouseClicked="#onEditButton" styleClass="addCommandeButton"/>
+                            <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Modifier le compte" onMouseClicked="#onEditButton" styleClass="addCommandeButton"/>
                         </children>
                     </HBox>
                     <padding>
