--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Dashboard.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Dashboard.fxml
@@ -84,7 +84,7 @@
                                 </HBox>
                             </children>
                         </HBox>
-                        <VBox maxHeight="600.0" maxWidth="800.0" minHeight="400.0" minWidth="400.0" prefHeight="500.0"
+                        <VBox fx:id="contentFeed" maxHeight="600.0" maxWidth="800.0" minHeight="400.0" minWidth="400.0" prefHeight="500.0"
                               prefWidth="800.0" styleClass="dashboard-feed-container">
                             <VBox.margin>
                                 <Insets top="30.0"/>
@@ -108,98 +108,6 @@
                                     </Label>
                                     <VBox.margin>
                                         <Insets/>
-                                    </VBox.margin>
-                                    <padding>
-                                        <Insets left="25.0"/>
-                                    </padding>
-                                </HBox>
-                                <HBox alignment="CENTER_LEFT" prefHeight="64" styleClass="dashboard-feed-line">
-                                    <VBox alignment="CENTER_LEFT">
-                                        <children>
-                                            <Label prefHeight="20.0" prefWidth="678.0" text="Nouveau client !">
-                                                <font>
-                                                    <Font size="14.0"/>
-                                                </font>
-                                            </Label>
-                                            <Label text="Subtitle"/>
-                                        </children>
-                                    </VBox>
-                                    <Label text="Il y a 6 heures">
-                                        <HBox.margin>
-                                            <Insets bottom="10.0"/>
-                                        </HBox.margin>
-                                    </Label>
-                                    <VBox.margin>
-                                        <Insets top="10.0"/>
-                                    </VBox.margin>
-                                    <padding>
-                                        <Insets left="25.0"/>
-                                    </padding>
-                                </HBox>
-                                <HBox alignment="CENTER_LEFT" prefHeight="64" styleClass="dashboard-feed-line">
-                                    <VBox alignment="CENTER_LEFT">
-                                        <children>
-                                            <Label prefHeight="20.0" prefWidth="678.0" text="Nouveau client !">
-                                                <font>
-                                                    <Font size="14.0"/>
-                                                </font>
-                                            </Label>
-                                            <Label text="Subtitle"/>
-                                        </children>
-                                    </VBox>
-                                    <Label text="Il y a 6 heures">
-                                        <HBox.margin>
-                                            <Insets bottom="10.0"/>
-                                        </HBox.margin>
-                                    </Label>
-                                    <VBox.margin>
-                                        <Insets top="10.0"/>
-                                    </VBox.margin>
-                                    <padding>
-                                        <Insets left="25.0"/>
-                                    </padding>
-                                </HBox>
-                                <HBox alignment="CENTER_LEFT" prefHeight="64" styleClass="dashboard-feed-line">
-                                    <VBox alignment="CENTER_LEFT">
-                                        <children>
-                                            <Label prefHeight="20.0" prefWidth="678.0" text="Nouveau client !">
-                                                <font>
-                                                    <Font size="14.0"/>
-                                                </font>
-                                            </Label>
-                                            <Label text="Subtitle"/>
-                                        </children>
-                                    </VBox>
-                                    <Label text="Il y a 6 heures">
-                                        <HBox.margin>
-                                            <Insets bottom="10.0"/>
-                                        </HBox.margin>
-                                    </Label>
-                                    <VBox.margin>
-                                        <Insets top="10.0"/>
-                                    </VBox.margin>
-                                    <padding>
-                                        <Insets left="25.0"/>
-                                    </padding>
-                                </HBox>
-                                <HBox alignment="CENTER_LEFT" prefHeight="64" styleClass="dashboard-feed-line">
-                                    <VBox alignment="CENTER_LEFT">
-                                        <children>
-                                            <Label prefHeight="20.0" prefWidth="678.0" text="Nouveau client !">
-                                                <font>
-                                                    <Font size="14.0"/>
-                                                </font>
-                                            </Label>
-                                            <Label text="Subtitle"/>
-                                        </children>
-                                    </VBox>
-                                    <Label text="Il y a 6 heures">
-                                        <HBox.margin>
-                                            <Insets bottom="10.0"/>
-                                        </HBox.margin>
-                                    </Label>
-                                    <VBox.margin>
-                                        <Insets top="10.0"/>
                                     </VBox.margin>
                                     <padding>
                                         <Insets left="25.0"/>
