--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/EditCommande.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/EditCommande.fxml
@@ -2,15 +2,15 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ComboBox?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.producteur.EditCommandeController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
@@ -20,7 +20,7 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button mnemonicParsing="false" styleClass="back-button" text="Retour" onMouseClicked="#onBackButton">
+                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" styleClass="back-button" text="Retour">
                             <graphic>
                                 <Region styleClass="back-button-img" />
                             </graphic>
@@ -30,31 +30,111 @@
                                 <Insets top="20.0" />
                             </VBox.margin>
                         </Label>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="435.0" prefWidth="871.0" spacing="60.0">
                             <children>
-                                <ComboBox fx:id="article" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner l'article"/>
-                                <TextField fx:id="quantite" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Quantité">
-                                    <HBox.margin>
-                                        <Insets left="200.0" />
-                                    </HBox.margin>
-                                </TextField>
+                                <VBox maxHeight="300.0" prefHeight="237.0" prefWidth="400.0" styleClass="profil-container">
+                                    <children>
+                                        <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="100.0" styleClass="profil-container-header">
+                                            <children>
+                                                <Label styleClass="profil-container-header-title" text="Détails de la commande" />
+                                            </children>
+                                            <padding>
+                                                <Insets left="20.0" />
+                                            </padding>
+                                        </VBox>
+                                        <VBox alignment="CENTER_LEFT" prefHeight="178.0" prefWidth="869.0" spacing="20.0">
+                                            <children>
+                                                <ComboBox fx:id="article" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner l'article" />
+                                                <TextField fx:id="quantite" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Quantité" />
+                                            </children>
+                                            <padding>
+                                                <Insets left="30.0" />
+                                            </padding>
+                                        </VBox>
+                                    </children>
+                                </VBox>
+                                <VBox maxHeight="335.0" minWidth="396.0" prefHeight="335.0" prefWidth="396.0" styleClass="profil-container">
+                                    <children>
+                                        <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="100.0" styleClass="profil-container-header">
+                                            <padding>
+                                                <Insets left="20.0" />
+                                            </padding>
+                                            <children>
+                                                <Label styleClass="profil-container-header-title" text="Horaires de la tournée" />
+                                            </children>
+                                        </VBox>
+                                        <VBox alignment="CENTER_LEFT" prefHeight="275.0" prefWidth="418.0">
+                                            <children>
+                                                <VBox styleClass="clock-container">
+                                                    <children>
+                                                        <Label styleClass="clock-title" text="Horaire de début :" />
+                                                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                                            <children>
+                                                                <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                                    <children>
+                                                                        <Button fx:id="plusHourDebut" mnemonicParsing="false" onMouseClicked="#onPlusHourDebut" styleClass="clock-plus-button" text="+" />
+                                                                        <Label fx:id="hourDebut" alignment="CENTER" minHeight="30.0" minWidth="30.0" prefHeight="10.0" prefWidth="10.0" styleClass="clock-digits" text="00" />
+                                                                        <Button fx:id="minusHourDebut" mnemonicParsing="false" onMouseClicked="#onMinusHourDebut" styleClass="clock-minus-button" text="-" />
+                                                                    </children>
+                                                                </VBox>
+                                                                <Label text=":" />
+                                                                <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                                    <children>
+                                                                        <Button fx:id="plusMinutesDebut" mnemonicParsing="false" onMouseClicked="#onPlusMinutesDebut" styleClass="clock-plus-button" text="+" />
+                                                                        <Label fx:id="minutesDebut" alignment="CENTER" minHeight="30.0" minWidth="30.0" styleClass="clock-digits" text="00" />
+                                                                        <Button fx:id="minusMinutesDebut" mnemonicParsing="false" onMouseClicked="#onMinusMinutesDebut" styleClass="clock-minus-button" text="-" />
+                                                                    </children>
+                                                                </VBox>
+                                                            </children>
+                                                        </HBox>
+                                                    </children>
+                                                    <padding>
+                                                        <Insets bottom="5.0" />
+                                                    </padding>
+                                                    <VBox.margin>
+                                                        <Insets bottom="15.0" />
+                                                    </VBox.margin>
+                                                </VBox>
+                                                <VBox>
+                                                    <children>
+                                                        <Label styleClass="clock-title" text="Horaire de fin :" />
+                                                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                                            <children>
+                                                                <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                                    <children>
+                                                                        <Button fx:id="plusHourFin" mnemonicParsing="false" onMouseClicked="#onPlusHourFin" styleClass="clock-plus-button" text="+" />
+                                                                        <Label fx:id="hourFin" alignment="CENTER" minHeight="30.0" minWidth="30.0" styleClass="clock-digits" text="00" />
+                                                                        <Button fx:id="minusHourFin" mnemonicParsing="false" onMouseClicked="#onMinusHourFin" styleClass="clock-minus-button" text="-" />
+                                                                    </children>
+                                                                </VBox>
+                                                                <Label text=":" />
+                                                                <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                                    <children>
+                                                                        <Button fx:id="plusMinutesFin" mnemonicParsing="false" onMouseClicked="#onPlusMinutesFin" styleClass="clock-plus-button" text="+" />
+                                                                        <Label fx:id="minutesFin" alignment="CENTER" minHeight="30.0" minWidth="30.0" styleClass="clock-digits" text="00" />
+                                                                        <Button fx:id="minusMinutesFin" mnemonicParsing="false" onMouseClicked="#onMinusMinutesFin" styleClass="clock-minus-button" text="-" />
+                                                                    </children>
+                                                                </VBox>
+                                                            </children>
+                                                        </HBox>
+                                                    </children>
+                                                </VBox>
+                                            </children>
+                                            <padding>
+                                                <Insets left="20.0" right="20.0" />
+                                            </padding>
+                                        </VBox>
+                                    </children>
+                                </VBox>
                             </children>
                             <VBox.margin>
-                                <Insets top="75.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <TextField fx:id="horaire" minHeight="40.0" minWidth="250.0" promptText="Horaire de livraison"></TextField>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="25.0" />
+                                <Insets top="50.0" />
                             </VBox.margin>
                         </HBox>
 
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Modifier la commande" onMouseClicked="#onEditButton" styleClass="addCommandeButton"/>
+                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onEditButton" styleClass="addCommandeButton" text="Modifier la commande" />
                             </children>
                         </HBox>
                     </children>
