--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Tournees.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Tournees.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.ScrollPane?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.producteur.TourneeController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white">
@@ -19,28 +20,90 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Label styleClass="main-title" text="Tournées">
+                        <HBox prefHeight="120.0" prefWidth="871.0">
                             <VBox.margin>
-                                <Insets bottom="75.0" />
+                                <Insets bottom="20.0"/>
                             </VBox.margin>
-                        </Label>
-
+                            <children>
+                                <Label prefHeight="35.0" prefWidth="142.0" styleClass="main-title" text="Tournées">
+                                    <HBox.margin>
+                                        <Insets top="30.0"/>
+                                    </HBox.margin>
+                                </Label>
+                                <VBox maxHeight="114.0" minWidth="400.0" prefHeight="114.0" prefWidth="400.0"
+                                      fx:id="successPopup" styleClass="successPopup" visible="false">
+                                    <HBox.margin>
+                                        <Insets left="325.0"/>
+                                    </HBox.margin>
+                                    <children>
+                                        <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0"
+                                              styleClass="successPopup-indicator"/>
+                                        <HBox prefHeight="120.0" prefWidth="340.0" styleClass="successPopup-container">
+                                            <children>
+                                                <Label prefHeight="17.0" prefWidth="33.0">
+                                                    <padding>
+                                                        <Insets left="10.0" top="17.0"/>
+                                                    </padding>
+                                                    <graphic>
+                                                        <Region styleClass="successPopup-img"/>
+                                                    </graphic>
+                                                </Label>
+                                                <VBox prefHeight="110.0" prefWidth="312.0">
+                                                    <children>
+                                                        <Label styleClass="successPopup-title"
+                                                               text="Tournée ajoutée !"/>
+                                                        <Label styleClass="successPopup-subtitle"
+                                                               text="La tournée n°X a bien été ajoutée !"/>
+                                                    </children>
+                                                    <padding>
+                                                        <Insets left="15.0" top="15.0"/>
+                                                    </padding>
+                                                </VBox>
+                                                <VBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="57.0">
+                                                    <children>
+                                                        <Button mnemonicParsing="false" prefHeight="28.0"
+                                                                prefWidth="28.0" styleClass="successPopup-close"
+                                                                onMouseClicked="#onClosePopup">
+                                                            <graphic>
+                                                                <Region styleClass="successPopup-close-img"/>
+                                                            </graphic>
+                                                            <VBox.margin>
+                                                                <Insets right="15.0" top="20.0"/>
+                                                            </VBox.margin>
+                                                        </Button>
+                                                    </children>
+                                                </VBox>
+                                            </children>
+                                        </HBox>
+                                    </children>
+                                </VBox>
+                            </children>
+                        </HBox>
                         <VBox fx:id="commandeTable" prefHeight="500" prefWidth="950" styleClass="commande-tableview">
                             <children>
-                                <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="950" styleClass="commande-tableview-header">
+                                <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="950" styleClass="commande-tableview-header" minHeight="56">
                                     <children>
                                         <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="151.0" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Id">
                                             <HBox.margin>
                                                 <Insets left="40.0" />
                                             </HBox.margin>
                                         </Label>
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Horaire " />
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-header-title" text="numImmat" />
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Horaire" />
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="171.0" styleClass="commande-tableview-header-title" text="Numéro d'immatriculation" />
                                     </children>
                                     <padding>
                                         <Insets right="40.0" />
                                     </padding>
                                 </HBox>
+                                <ScrollPane prefHeight="444.0" prefWidth="869.0">
+                                    <content>
+                                        <VBox fx:id="contentTable" style="-fx-background-color: white;">
+                                            <children>
+
+                                            </children>
+                                        </VBox>
+                                    </content>
+                                </ScrollPane>
                             </children>
                         </VBox>
                         <Pane>
