--- a/src/main/resources/com/mmn/circuitscourts/fxml/Client/NewCommande.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Client/NewCommande.fxml
@@ -29,19 +29,93 @@
                         <Insets top="25.0" />
                      </VBox.margin>
                   </Label>
-                  <HBox alignment="CENTER" minHeight="447.0" minWidth="763.0" prefHeight="100.0" prefWidth="200.0" spacing="70.0">
+                  <HBox alignment="TOP_CENTER" minHeight="447.0" minWidth="763.0" prefHeight="577.0" prefWidth="871.0" spacing="70.0">
                      <VBox.margin>
                         <Insets top="50.0" />
                      </VBox.margin>
                      <children>
-                        <VBox fx:id="articleContainer" maxHeight="414.0" prefHeight="414.0" prefWidth="240.0" />
+                        <VBox fx:id="articleContainer" maxHeight="414.0" prefHeight="414.0" prefWidth="240.0">
+                           <HBox.margin>
+                              <Insets top="40.0" />
+                           </HBox.margin></VBox>
                         <VBox alignment="CENTER" minWidth="400" prefHeight="200" prefWidth="400" spacing="33.0">
                            <children>
+                               <VBox maxHeight="335.0" minWidth="396.0" prefHeight="335.0" prefWidth="396.0" styleClass="profil-container">
+                                   <children>
+                                       <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="100.0" styleClass="profil-container-header">
+                                           <padding>
+                                               <Insets left="20.0" />
+                                           </padding>
+                                           <children>
+                                               <Label styleClass="profil-container-header-title" text="Horaires de livraison" />
+                                           </children>
+                                       </VBox>
+                                       <VBox alignment="CENTER_LEFT" prefHeight="275.0" prefWidth="418.0">
+                                           <children>
+                                               <VBox styleClass="clock-container">
+                                                   <children>
+                                                       <Label styleClass="clock-title" text="Horaire de début :" />
+                                                       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                                           <children>
+                                                               <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                                   <children>
+                                                                       <Button fx:id="plusHourDebut" mnemonicParsing="false" onMouseClicked="#onPlusHourDebut" styleClass="clock-plus-button" text="+" />
+                                                                       <Label fx:id="hourDebut" alignment="CENTER" minHeight="30.0" minWidth="30.0" prefHeight="10.0" prefWidth="10.0" styleClass="clock-digits" text="00" />
+                                                                       <Button fx:id="minusHourDebut" mnemonicParsing="false" onMouseClicked="#onMinusHourDebut" styleClass="clock-minus-button" text="-" />
+                                                                   </children>
+                                                               </VBox>
+                                                               <Label text=":" />
+                                                               <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                                   <children>
+                                                                       <Button fx:id="plusMinutesDebut" mnemonicParsing="false" onMouseClicked="#onPlusMinutesDebut" styleClass="clock-plus-button" text="+" />
+                                                                       <Label fx:id="minutesDebut" alignment="CENTER" minHeight="30.0" minWidth="30.0" styleClass="clock-digits" text="00" />
+                                                                       <Button fx:id="minusMinutesDebut" mnemonicParsing="false" onMouseClicked="#onMinusMinutesDebut" styleClass="clock-minus-button" text="-" />
+                                                                   </children>
+                                                               </VBox>
+                                                           </children>
+                                                       </HBox>
+                                                   </children>
+                                                   <padding>
+                                                       <Insets bottom="5.0" />
+                                                   </padding>
+                                                   <VBox.margin>
+                                                       <Insets bottom="15.0" />
+                                                   </VBox.margin>
+                                               </VBox>
+                                               <VBox>
+                                                   <children>
+                                                       <Label styleClass="clock-title" text="Horaire de fin :" />
+                                                       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                                           <children>
+                                                               <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                                   <children>
+                                                                       <Button fx:id="plusHourFin" mnemonicParsing="false" onMouseClicked="#onPlusHourFin" styleClass="clock-plus-button" text="+" />
+                                                                       <Label fx:id="hourFin" alignment="CENTER" minHeight="30.0" minWidth="30.0" styleClass="clock-digits" text="00" />
+                                                                       <Button fx:id="minusHourFin" mnemonicParsing="false" onMouseClicked="#onMinusHourFin" styleClass="clock-minus-button" text="-" />
+                                                                   </children>
+                                                               </VBox>
+                                                               <Label text=":" />
+                                                               <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                                   <children>
+                                                                       <Button fx:id="plusMinutesFin" mnemonicParsing="false" onMouseClicked="#onPlusMinutesFin" styleClass="clock-plus-button" text="+" />
+                                                                       <Label fx:id="minutesFin" alignment="CENTER" minHeight="30.0" minWidth="30.0" styleClass="clock-digits" text="00" />
+                                                                       <Button fx:id="minusMinutesFin" mnemonicParsing="false" onMouseClicked="#onMinusMinutesFin" styleClass="clock-minus-button" text="-" />
+                                                                   </children>
+                                                               </VBox>
+                                                           </children>
+                                                       </HBox>
+                                                   </children>
+                                               </VBox>
+                                           </children>
+                                           <padding>
+                                               <Insets left="20.0" right="20.0" />
+                                           </padding>
+                                       </VBox>
+                                   </children>
+                               </VBox>
                               <TextField fx:id="tfQuantity" maxWidth="250" prefHeight="40" promptText="Quantité" />
-                              <TextField fx:id="tfHoraireDebut" maxWidth="250" prefHeight="40" promptText="Horaire de début" />
-                              <TextField fx:id="tfHoraireFin" maxWidth="250" prefHeight="40" promptText="Horaire de fin" />
                               <Label fx:id="totalPrice" styleClass="marketplace-article-title" text="Prix total : " />
-                              <Button minHeight="40.0" mnemonicParsing="false" prefWidth="132.0" styleClass="addCommandeButton" text="Commander" onMouseClicked="#onCreate"/>
+                              <Button minHeight="40.0" mnemonicParsing="false" onMouseClicked="#onCreate" prefWidth="132.0" styleClass="addCommandeButton" text="Commander" />
                            </children>
                         </VBox>
                      </children>
