--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddCommande.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddCommande.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -28,60 +29,117 @@
                                 <Region styleClass="back-button-img" />
                             </graphic>
                         </Button>
-                        <Label styleClass="main-title" text="Ajout d'une commande">
+                        <Label prefHeight="35.0" prefWidth="268.0" styleClass="main-title" text="Ajout d'une commande">
                             <VBox.margin>
                                 <Insets top="20.0" />
                             </VBox.margin></Label>
+                  <HBox alignment="CENTER_LEFT" prefHeight="531.0" prefWidth="871.0" spacing="100.0">
+                     <children>
+                        <VBox alignment="TOP_CENTER" maxHeight="420.0" prefHeight="354.0" prefWidth="375.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Détails de la commande" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox alignment="CENTER_LEFT" prefHeight="362.0" prefWidth="373.0" spacing="30.0">
+                                 <children>
+                                    <ComboBox fx:id="article" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionnez l'article" />
+                                    <TextField fx:id="quantite" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Quantité" />
+                                    <ComboBox fx:id="client" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionnez le client" />
+                                    <DatePicker fx:id="date" minHeight="40.0" prefWidth="250.0" promptText="Selectionner la date" />
+                                    <ComboBox fx:id="entreprises" minHeight="40.0" prefWidth="250.0" promptText="Selectionnez l'entreprise" />
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                                 <padding>
+                                    <Insets left="30.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                        </VBox>
+                        <VBox maxHeight="335.0" minWidth="396.0" prefHeight="335.0" prefWidth="396.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Horaires de livraison" />
+                                 </children>
+                              </VBox>
+                              <VBox alignment="CENTER_LEFT" prefHeight="275.0" prefWidth="418.0">
+                                 <children>
+                                    <VBox styleClass="clock-container">
+                                       <children>
+                                          <Label styleClass="clock-title" text="Horaire de début :" />
+                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                             <children>
+                                                <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                   <children>
+                                                      <Button fx:id="plusHourDebut" mnemonicParsing="false" onMouseClicked="#onPlusHourDebut" styleClass="clock-plus-button" text="+" />
+                                                      <Label fx:id="hourDebut" alignment="CENTER" minHeight="30.0" minWidth="30.0" prefHeight="10.0" prefWidth="10.0" styleClass="clock-digits" text="00" />
+                                                      <Button fx:id="minusHourDebut" mnemonicParsing="false" onMouseClicked="#onMinusHourDebut" styleClass="clock-minus-button" text="-" />
+                                                   </children>
+                                                </VBox>
+                                                <Label text=":" />
+                                                <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                   <children>
+                                                      <Button fx:id="plusMinutesDebut" mnemonicParsing="false" onMouseClicked="#onPlusMinutesDebut" styleClass="clock-plus-button" text="+" />
+                                                      <Label fx:id="minutesDebut" alignment="CENTER" minHeight="30.0" minWidth="30.0" styleClass="clock-digits" text="00" />
+                                                      <Button fx:id="minusMinutesDebut" mnemonicParsing="false" onMouseClicked="#onMinusMinutesDebut" styleClass="clock-minus-button" text="-" />
+                                                   </children>
+                                                </VBox>
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                       <padding>
+                                          <Insets bottom="5.0" />
+                                       </padding>
+                                       <VBox.margin>
+                                          <Insets bottom="15.0" />
+                                       </VBox.margin>
+                                    </VBox>
+                                    <VBox>
+                                       <children>
+                                          <Label styleClass="clock-title" text="Horaire de fin :" />
+                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                             <children>
+                                                <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                   <children>
+                                                      <Button fx:id="plusHourFin" mnemonicParsing="false" onMouseClicked="#onPlusHourFin" styleClass="clock-plus-button" text="+" />
+                                                      <Label fx:id="hourFin" alignment="CENTER" minHeight="30.0" minWidth="30.0" styleClass="clock-digits" text="00" />
+                                                      <Button fx:id="minusHourFin" mnemonicParsing="false" onMouseClicked="#onMinusHourFin" styleClass="clock-minus-button" text="-" />
+                                                   </children>
+                                                </VBox>
+                                                <Label text=":" />
+                                                <VBox alignment="CENTER" prefHeight="100.0" prefWidth="112.0">
+                                                   <children>
+                                                      <Button fx:id="plusMinutesFin" mnemonicParsing="false" onMouseClicked="#onPlusMinutesFin" styleClass="clock-plus-button" text="+" />
+                                                      <Label fx:id="minutesFin" alignment="CENTER" minHeight="30.0" minWidth="30.0" styleClass="clock-digits" text="00" />
+                                                      <Button fx:id="minusMinutesFin" mnemonicParsing="false" onMouseClicked="#onMinusMinutesFin" styleClass="clock-minus-button" text="-" />
+                                                   </children>
+                                                </VBox>
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                                 <padding>
+                                    <Insets left="20.0" right="20.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <ComboBox fx:id="article" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner l'article"/>
-                                <TextField fx:id="quantite" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Quantité">
-                                    <HBox.margin>
-                                        <Insets left="200.0" />
-                                    </HBox.margin>
-                                </TextField>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="75.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <ComboBox fx:id="client" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner le client" onMouseClicked="#clientInitialize"/>
-                                <TextField fx:id="horaire" minHeight="40.0" minWidth="250.0" promptText="Horaire de livraison">
-                                    <HBox.margin>
-                                        <Insets left="200.0" />
-                                    </HBox.margin>
-                                </TextField>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="25.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <ComboBox fx:id="numSiret" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Numéro Siret"/>
-                                <ComboBox fx:id="tournee" minHeight="40.0" minWidth="250.0" promptText="Tournée n°">
-                                    <HBox.margin>
-                                        <Insets left="200.0" />
-                                    </HBox.margin>
-                                </ComboBox>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="25.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" minWidth="0.0" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <DatePicker id="datePicker" minHeight="40.0" minWidth="250.0" promptText="Selectionner la date"/>
-                            </children>
-                            <VBox.margin>
-                                <Insets />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Ajouter la commande" onMouseClicked="#onCreateButton" styleClass="addCommandeButton"/>
+                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onCreateButton" styleClass="addCommandeButton" text="Ajouter la commande" />
                             </children>
                         </HBox>
                     </children>
