--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Sidebar.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Sidebar.fxml
@@ -1,44 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
-<BorderPane styleClass="sidebar" BorderPane.alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.AdminSidebarController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+
+<BorderPane styleClass="sidebar" BorderPane.alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.mmn.circuitscourts.controller.admin.AdminSidebarController">
     <top>
-        <VBox alignment="CENTER" maxHeight="64.0" minWidth="248" prefHeight="64.0" prefWidth="248.0"
-              styleClass="sidebar-title-container" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" maxHeight="64.0" minWidth="248" prefHeight="64.0" prefWidth="248.0" styleClass="sidebar-title-container" BorderPane.alignment="CENTER">
             <children>
-                <Label styleClass="sidebar-title" text="CircuitsCourts"/>
+                <Label styleClass="sidebar-title" text="CircuitsCourts" />
             </children>
         </VBox>
     </top>
     <bottom>
-        <HBox maxHeight="68.0" maxWidth="248.0" styleClass="sidebar-profil-container"
-              BorderPane.alignment="CENTER">
+        <HBox maxHeight="68.0" maxWidth="248.0" styleClass="sidebar-profil-container" BorderPane.alignment="CENTER">
             <children>
                 <VBox prefHeight="64.0" prefWidth="248">
                     <children>
-                        <Label maxHeight="19.0" maxWidth="160.0" prefHeight="19.0" prefWidth="160.0"
-                               fx:id="userName"
-                               styleClass="sidebar-profil-name"/>
-                        <Label styleClass="sidebar-profil-email" fx:id="userGrade"/>
+                        <Label fx:id="userName" maxHeight="19.0" maxWidth="160.0" prefHeight="19.0" prefWidth="160.0" styleClass="sidebar-profil-name" />
+                        <Label fx:id="userGrade" styleClass="sidebar-profil-email" />
                     </children>
                     <padding>
-                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                     </padding>
                 </VBox>
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                     <children>
-                        <VBox fx:id="disconnectContainer" alignment="CENTER" maxHeight="24.0"
-                              maxWidth="24.0" minHeight="24.0" minWidth="24.0"
-                              onMouseClicked="#onDisconnect"
-                              styleClass="sidebar-profil-disconnect-button-container">
-                            <Button fx:id="disconnectButton" mnemonicParsing="false"
-                                    onMouseClicked="#onDisconnect" pickOnBounds="true"
-                                    styleClass="sidebar-profil-disconnect-button">
+                        <VBox fx:id="disconnectContainer" alignment="CENTER" maxHeight="24.0" maxWidth="24.0" minHeight="24.0" minWidth="24.0" onMouseClicked="#onDisconnect" styleClass="sidebar-profil-disconnect-button-container">
+                            <Button fx:id="disconnectButton" mnemonicParsing="false" onMouseClicked="#onDisconnect" pickOnBounds="true" styleClass="sidebar-profil-disconnect-button">
                                 <graphic>
-                                    <Region styleClass="icon"/>
+                                    <Region styleClass="icon" />
                                 </graphic>
                             </Button>
                         </VBox>
@@ -50,86 +45,81 @@
     <center>
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_CENTER">
             <children>
-                <Button fx:id="dashboardTab" alignment="TOP_LEFT" maxHeight="40" maxWidth="216.0"
-                        prefHeight="40" prefWidth="216.0" styleClass="sidebar-tab"
-                        text=" Tableau de bord" pickOnBounds="true" onMouseClicked="#onDashboardButton">
+                <Button fx:id="dashboardTab" alignment="TOP_LEFT" maxHeight="40" maxWidth="216.0" onMouseClicked="#onDashboardButton" pickOnBounds="true" prefHeight="40" prefWidth="216.0" styleClass="sidebar-tab" text=" Tableau de bord">
                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                     <graphic>
                         <Region styleClass="sidebar-tab-img-dashboard" />
                     </graphic>
                 </Button>
-                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle"
-                       text="Gestion">
+                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle" text="Gestion">
                     <padding>
-                        <Insets bottom="7.0" left="10.0" right="10.0" top="7.0"/>
+                        <Insets bottom="7.0" left="10.0" right="10.0" top="7.0" />
                     </padding>
                     <VBox.margin>
-                        <Insets bottom="5" top="5"/>
+                        <Insets bottom="5" top="5" />
                     </VBox.margin>
                 </Label>
-                <Button fx:id="commandesTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Commandes" onMouseClicked="#onCommandesButton" pickOnBounds="true">
+                <Button fx:id="commandesTab" alignment="TOP_LEFT" maxWidth="216" onMouseClicked="#onCommandesButton" pickOnBounds="true" prefWidth="216" styleClass="sidebar-tab" text=" Commandes">
                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                     <graphic>
                         <Region styleClass="sidebar-tab-img-commande" />
                     </graphic>
                 </Button>
-                <Button fx:id="tourneeTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Tournées" onMouseClicked="#onTourneeButton" pickOnBounds="true">
+                <Button fx:id="tourneeTab" alignment="TOP_LEFT" maxWidth="216" onMouseClicked="#onTourneeButton" pickOnBounds="true" prefWidth="216" styleClass="sidebar-tab" text=" Tournées">
                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                     <graphic>
-                        <Region styleClass="sidebar-tab-img-tournee"/>
+                        <Region styleClass="sidebar-tab-img-tournee" />
                     </graphic>
                 </Button>
-                <Button fx:id="vehiculesTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Véhicules" onMouseClicked="#onVehiculesButton" pickOnBounds="true">
+                <Button fx:id="vehiculesTab" alignment="TOP_LEFT" maxWidth="216" onMouseClicked="#onVehiculesButton" pickOnBounds="true" prefWidth="216" styleClass="sidebar-tab" text=" Véhicules">
                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                     <graphic>
                         <Region styleClass="sidebar-tab-img-vehicules" />
                     </graphic>
                 </Button>
-                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle"
-                       text="Gestion des personnes">
+                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle" text="Gestion des entitées">
                     <padding>
-                        <Insets bottom="7.0" left="10.0" right="10.0" top="7.0"/>
+                        <Insets bottom="7.0" left="10.0" right="10.0" top="7.0" />
                     </padding>
                     <VBox.margin>
-                        <Insets bottom="5" top="5"/>
+                        <Insets bottom="5" top="5" />
                     </VBox.margin>
                 </Label>
-                <Button fx:id="producteurTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Producteur" onMouseClicked="#onProducteurButton" pickOnBounds="true">
+                <Button fx:id="entrepriseTab" alignment="TOP_LEFT" maxWidth="216" onMouseClicked="#onEntrepriseButton" pickOnBounds="true" prefWidth="216" styleClass="sidebar-tab" text=" Entreprise">
                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                     <graphic>
-                        <Region styleClass="sidebar-tab-img-producteur" />
+                        <Region styleClass="sidebar-tab-img-entreprise" />
                     </graphic>
                 </Button>
-                <Button fx:id="clientTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Client" onMouseClicked="#onClientButton" pickOnBounds="true">
+                <Button fx:id="clientTab" alignment="TOP_LEFT" maxWidth="216" onMouseClicked="#onClientButton" pickOnBounds="true" prefWidth="216" styleClass="sidebar-tab" text=" Client">
                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                     <graphic>
                         <Region styleClass="sidebar-tab-img-client" />
                     </graphic>
                 </Button>
-                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle"
-                       text="Gestion des accès">
+                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle" text="Gestion des accès">
                     <padding>
-                        <Insets bottom="7.0" left="10.0" right="10.0" top="7.0"/>
+                        <Insets bottom="7.0" left="10.0" right="10.0" top="7.0" />
                     </padding>
                     <VBox.margin>
-                        <Insets bottom="5" top="5"/>
+                        <Insets bottom="5" top="5" />
                     </VBox.margin>
                 </Label>
-                <Button fx:id="accountsTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Comptes" onMouseClicked="#onAccountButton" pickOnBounds="true">
+                <Button fx:id="accountsTab" alignment="TOP_LEFT" maxWidth="216" onMouseClicked="#onAccountButton" pickOnBounds="true" prefWidth="216" styleClass="sidebar-tab" text=" Comptes">
                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                     <graphic>
                         <Region styleClass="sidebar-tab-img-accounts" />
@@ -137,7 +127,7 @@
                 </Button>
             </children>
             <padding>
-                <Insets left="15.0" top="40.0"/>
+                <Insets left="15.0" top="40.0" />
             </padding>
         </VBox>
     </center>
